fix responsive collapse on tag/archives panel

--- a/assets/css/wad.css
+++ b/assets/css/wad.css
@@ -522,6 +522,7 @@ button.btn.btn-mini,input[type="submit"].btn.btn-mini{*padding-top:1px;*padding-
 .btn-navbar .icon-bar{display:block;width:18px;height:2px;background-color:#f5f5f5;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);}
 .btn-navbar .icon-bar+.icon-bar{margin-top:3px;}
 .nav-collapse.collapse{height:auto;}
+.tagarchives-collapse.collapse{height:auto;}
 .navbar{color:#999999;}.navbar .brand:hover{text-decoration:none;}
 .navbar .brand{float:left;display:block;padding:8px 20px 12px;margin-left:-20px;font-size:20px;font-weight:200;line-height:1;color:#ffffff;}
 .navbar .navbar-text{margin-bottom:0;line-height:40px;}
@@ -832,6 +833,10 @@ padding-top: 60px;
   }
 }
 @media (max-width: 768px) {
+  .tagarchives-collapse {
+    overflow: hidden;
+    height: 0;
+  }
   body {
     padding-left: 20px;
     padding-right: 20px;
@@ -1187,6 +1192,12 @@ padding-top: 60px;
   .nav-collapse {
     overflow: hidden;
     height: 0;
+  }
+}
+@media (min-width: 768px) {
+  .tagarchives-collapse.collapse {
+    height: auto !important;
+    overflow: visible !important;
   }
 }
 @media (min-width: 980px) {
